# automacao-gcpj-encerramento

./: .editorconfig  .env.example  .gitattributes  .gitignore  CHANGELOG.md  INICIAR_AQUI.md  LICENSE  MANIFEST_SHA256.txt  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: app.yaml  motivo_mapping.yaml  selectors.yaml
docs/: ARQUITETURA.md  ESCOPO_DO_VIDEO.md  HOMOLOGACAO.md  VALIDACAO_TECNICA.md
scripts/: abrir_chrome_debug.bat  diagnostico.ps1  executar_testes.bat  iniciar_app.bat  setup_windows.ps1
src/gcpj_automation/: __init__.py  config.py  exceptions.py  logging_setup.py  models.py  normalization.py
src/gcpj_automation/browser/: chrome.py  gcpj_page.py  selectors.py  session.py
src/gcpj_automation/repositories/: execution_repository.py
src/gcpj_automation/services/: diagnostics.py  reason_mapper.py  report.py  runner.py  spreadsheet.py
src/gcpj_automation/ui/: components.py  styles.py
templates/: modelo_planilha_encerramento.xlsx
tests/: test_gcpj_page_mock.py  test_normalization.py  test_reason_mapper.py  test_report.py  test_repository.py  test_selectors.py  test_spreadsheet.py  test_template.py
