[project]
name = "gcpj-encerramento"
version = "0.1.0"
description = "Automacao local em Streamlit e Playwright para solicitar encerramento de pastas no GCPJ."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "streamlit>=1.50,<2.0",
  "playwright>=1.57,<2.0",
  "pandas>=2.2,<3.0",
  "openpyxl>=3.1,<4.0",
  "xlrd>=2.0,<3.0",
  "PyYAML>=6.0,<7.0",
  "filelock>=3.16,<4.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "data", "evidence"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"streamlit_app.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
